run simple SD simulation